test/spec/multi-value/loop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-value/loop.wast
;;; ARGS*: --enable-multi-value
(;; STDOUT ;;;
out/test/spec/multi-value/loop.wast:394: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.1.wat:1:95: error: unexpected token (, expected ).
  ...result i32)))(func (i32.const 0) (loop (type $sig) (result i32) (param i32)))
                                                                     ^
out/test/spec/multi-value/loop.wast:401: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.2.wat:1:82: error: unexpected token (, expected ).
  ...result i32)))(func (i32.const 0) (loop (param i32) (type $sig) (result i32)))
                                                        ^
out/test/spec/multi-value/loop.wast:408: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.3.wat:1:95: error: unexpected token (, expected ).
  ...result i32)))(func (i32.const 0) (loop (param i32) (result i32) (type $sig)))
                                                                     ^
out/test/spec/multi-value/loop.wast:415: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.4.wat:1:83: error: unexpected token (, expected ).
  ...result i32)))(func (i32.const 0) (loop (result i32) (type $sig) (param i32)))
                                                         ^
out/test/spec/multi-value/loop.wast:422: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.5.wat:1:83: error: unexpected token (, expected ).
  ...result i32)))(func (i32.const 0) (loop (result i32) (param i32) (type $sig)))
                                                         ^
out/test/spec/multi-value/loop.wast:429: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.6.wat:1:40: error: unexpected token (, expected ).
  (func (i32.const 0) (loop (result i32) (param i32)))
                                         ^
out/test/spec/multi-value/loop.wast:436: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.7.wat:1:34: error: unexpected token $x, expected ).
  (func (i32.const 0) (loop (param $x i32) (drop)))
                                   ^^
  out/test/spec/multi-value/loop/loop.7.wat:1:49: error: unexpected token ), expected EOF.
  (func (i32.const 0) (loop (param $x i32) (drop)))
                                                  ^
out/test/spec/multi-value/loop.wast:440: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.8.wat:1:25: error: expected 0 results, got 1
  (type $sig (func))(func (loop (type $sig) (result i32) (i32.const 0)) (unreac...
                          ^
out/test/spec/multi-value/loop.wast:447: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.9.wat:1:50: error: expected 1 arguments, got 0
  ...func (param i32) (result i32)))(func (loop (type $sig) (result i32) (i32.c...
                                          ^
out/test/spec/multi-value/loop.wast:454: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.10.wat:1:64: error: expected 1 results, got 0
  ...2) (result i32)))(func (i32.const 0) (loop (type $sig) (param i32) (drop))...
                                          ^
out/test/spec/multi-value/loop.wast:461: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.11.wat:1:68: error: expected 2 arguments, got 1
  ...2) (result i32)))(func (i32.const 0) (loop (type $sig) (param i32) (result...
                                          ^
out/test/spec/multi-value/loop.wast:469: assert_invalid passed:
  error: type mismatch in loop, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:477: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/loop.wast:481: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/loop.wast:485: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/loop.wast:489: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/loop.wast:494: assert_invalid passed:
  error: type mismatch in loop, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:500: assert_invalid passed:
  error: type mismatch in loop, expected [] but got [i32, i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:506: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:512: assert_invalid passed:
  error: type mismatch in loop, expected [i32, i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:518: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:524: assert_invalid passed:
  error: type mismatch in loop, expected [i32, i32] but got []
  000001d: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:530: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:536: assert_invalid passed:
  error: type mismatch in loop, expected [i32, i32] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:542: assert_invalid passed:
  error: type mismatch in loop, expected [i32, i32] but got [i32]
  0000020: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:548: assert_invalid passed:
  error: type mismatch in loop, expected [] but got [i32]
  000001f: error: OnEndExpr callback failed
out/test/spec/multi-value/loop.wast:554: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/multi-value/loop.wast:561: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001d: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:567: assert_invalid passed:
  error: type mismatch in loop, expected [i32, f64] but got []
  000001e: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:573: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got [f32]
  0000022: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:579: assert_invalid passed:
  error: type mismatch in loop, expected [f32, i32] but got [f32]
  0000023: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:585: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001f: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:591: assert_invalid passed:
  error: type mismatch in loop, expected [i32, f64] but got []
  0000020: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:597: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got [f32]
  0000024: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:603: assert_invalid passed:
  error: type mismatch in loop, expected [f32, i32] but got [f32]
  0000025: error: OnLoopExpr callback failed
out/test/spec/multi-value/loop.wast:610: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.36.wat:1:44: error: unexpected token $x, expected ).
  (func (param i32) (result i32) loop (param $x i32) end)
                                             ^^
out/test/spec/multi-value/loop.wast:614: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.37.wat:1:45: error: unexpected token $x, expected ).
  (func (param i32) (result i32) (loop (param $x i32)))
                                              ^^
out/test/spec/multi-value/loop.wast:619: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.38.wat:1:16: error: unexpected label "$l"
  (func loop end $l)
                 ^^
out/test/spec/multi-value/loop.wast:623: assert_malformed passed:
  out/test/spec/multi-value/loop/loop.39.wat:1:19: error: mismatching label "$a" != "$l"
  (func loop $a end $l)
                    ^^
92/92 tests passed.
;;; STDOUT ;;)
